--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "pandasai>=2.0.24",
     "pypdf>=5.1.0",
     "assemblyai>=0.35.1",
+    "playwright>=1.49.1",
+    "beautifulsoup4>=4.12.3",
 ]
 [tool.uv]
 cache-dir = "./.uv_cache"
